# Voice-Assistance

./: .coverage  .gitignore  .pyre_configuration  brain.py  check_mic.py  main.py  pyproject.toml  requirements.txt  stt.py  test_mic_stream.py  tts.py  wake_word.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/jarvis_core_20260301/: index.md  metadata.json  plan.md  spec.md
tests/: test_main.py  test_stt.py  test_tts.py  test_wake_word.py
